@@ -1,4 +1,5 @@
-201305XX 1.19 
+20140416 1.20 outputports marked WRITE to get UNSUBSCRIBED messages from System
+20140404 1.19 CONSTS exported as advertised
 20130514 1.18 parse_address matches startofstring to cover alsa-lib 1.0.24 bug
 20130211      noteonevent and noteoffevent accept a $start parameter
 20121208 1.17 test.pl handles alsa_1.0.16 quirk
